Somehow fix wrong size popup
by replacing <html> with <!DOCTYPE html>

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0px;
 }
 
+.popup-body {
+    height: 100px;
+}
+
 div {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 5px;
